@@ -1,3 +1,11 @@
+2011-10-10  Ulrich Weigand  <ulrich.weigand@linaro.org>
+
+	PR gdb/13218
+	* arm-linux-nat.c (os_version, os_major, os_minor, os_release):
+	Remove unused variables.
+	(get_linux_version): Remove function.
+	(_initialize_arm_linux_nat): Do not call it.
+
 2011-10-10  Pedro Alves  <pedro@codesourcery.com>
 
 	* linux-nat.c (linux_handle_extended_wait): Don't resume the new
